--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>flask-test-page</title>
-</head>
-<body>
-	<h1>It Works!</h1>
-	<p>아싸ㅋㅋ</p>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block contents %}
+	<div class="llArticleList">
+		{% if context.article_list %}
+			{% for article in context.article_list %}
+			<div class="well" id="article_{{ article.id }}">
+				<h1><a href="{{ url_for('article_detail', id=article.id) }}">{{ article.title }}</a></h1>
+				<h3>{{ article.author }}</h3>
+				<h6>{{ article.date_created.strftime('%Y-%m-%d %H:%M:%S')}}</h6>
+				<p>{{ article.content|truncate(50)|safe }}</p>
+			</div>
+			{% endfor %}
+		{% else %}
+			<div class="no_list">
+				글이 존재하지 않습니다. 새로운 글을 등록해주세요.
+			</div>
+		{% endif %}
+	</div>
+{% endblock %}
