--- a/app/templates/article/detail.html
+++ b/app/templates/article/detail.html
@@ -10,6 +10,7 @@
         </div>
         <div class="panel-body">
             {{ article.content|safe }}
+            <button class="btn btn-info">Like!</button>
         </div>
     </div>
 
