--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -6,6 +6,7 @@
         <ul class="nav navbar-nav pull-right">
             <li{% if active_tab == 'timeline' %} class="active"{% endif %}><a href="{{ url_for('article_list') }}">타임라인</a></li>
             <li{% if active_tab == 'article_create' %} class="active"{% endif %}><a href="{{ url_for('article_create') }}">글쓰기</a></li>
+            <li{% if active_tab == 'user_join' %} class="active"{% endif %}><a href="{{ url_for('user_join') }}">회원가입</a></li>
         </ul>
     </div>
 </nav>
